Swagger Add fixes
