# src/routes/state.router.js
@@ -1,8 +1,9 @@
 const express = require('express');
-const { addState } = require('../controller/state.controller');
+const { addState, StateList } = require('../controller/state.controller');
 
 const StateRouter = express.Router();
 
 StateRouter.post("/addState", addState);
+StateRouter.get("/listOfState", StateList);
 
 module.exports = StateRouter;
